# sstc

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  desired_output.sql  output.sql  pyproject.toml
docs/: architecture.md
docs/notes/: README.md  open-problems.md
docs/notes/architecture/: README.md  layers.md  loop-prevention.md  timing-and-ordering.md
docs/notes/constraints/: README.md  conditional-join-dependencies.md  functional-dependencies.md  guard-dependencies.md  multivalued-dependencies.md
docs/notes/example/: 1_source.sql  2_target.sql  3_updates.sql  4_functions.sql  5_triggers.sql  6_update.sql  README.md  full_script.sql  null_example_notes.sql  pipeline-walkthrough.md  reference-output.sql  schema.md
docs/notes/sql-generation/: README.md  delete-chain.md  insert-chain.md  mapping-functions.md  table-creation.md
docs/papers/: README.md
docs/plans/: 2026-03-19-docs-notes-design.md  2026-03-19-docs-notes-plan.md  2026-04-02-guard-hierarchy-design.md  2026-04-02-guard-hierarchy-impl.md  2026-04-02-nullable-guard-hierarchy-design.md
docs/superpowers/specs/: 2026-04-08-integration-tests-design.md
notes/: constraint_definition.sql  full_script_v5_tabletemp.sql  transducer_definition.sql  updates_and_more.sql
src/ssqlt_prototype/: __init__.py  generator.py
src/ssqlt_prototype/TransducerContext/: __init__.py  context.py
src/ssqlt_prototype/TransducerContext/Dataclasses/: __init__.py  constraint.py  db_context.py  dependency.py  insert_table.py  join_table.py  mapping.py  table.py
src/sstc/: __init__.py  __main__.py  constraints.py  context.py  definition.py  generator.py  guard.py  source_context.py  source_table.py  table.py  target_context.py  target_table.py  transducer.py  transducer_context.py
src/sstc/templates/: capture_function.sql.j2  capture_trigger.sql.j2  cfd_check.sql.j2  create_table.sql.j2  delete_mapping.sql.j2  fd_check.sql.j2  inc_check.sql.j2  insert_mapping.sql.j2  join_function.sql.j2  join_trigger.sql.j2  mapping_trigger.sql.j2  mvd_check.sql.j2  mvd_grounding.sql.j2  preamble.sql.j2  tracking_table.sql.j2
test/: conftest.py  fixtures.py  test_constraint.py  test_context.py  test_dependency.py  test_generator.py  test_golden.py  test_integration.py  test_source_context.py
test/golden/: example1.sql  example2.sql
test/inputs/example1/: mappings.txt  source.txt  source_constraints.txt  source_schema.json  target.txt  universal.json
test/inputs/example2/: source.txt  target.txt  universal.json
test/resources/example2/source/constraints/: transducer._person.cfd.1.before.insert.sql  transducer._person.cfd.2.before.insert.sql  transducer._person.cfd.3.before.insert.sql  transducer._person.ind.1.before.insert.sql  transducer._person.mvd.1.before.insert.sql  (+1 more)
(+8 files in other folders)
