[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sstc"
version = "0.0.1"
dependencies = []
requires-python = ">= 3.11"
authors = [
    {"name" = "Aidan Bailey", email = "abailey@airu.org.za"}
]
maintainers = [
    {"name" = "Aidan Bailey", email = "abailey@airu.org.za"}
]
description = "Compiles a Semantic SQL Transducer defined using relational algebra into SQL"
readme = {file = "README.md", content-type = "text/markdown" }
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
]

[project.urls]
Repository = "https://github.com/unibz-krdb/ssqlt-prototype"
