[project]
name = "sstc"
version = "0.0.1"
dependencies = [
    "dataclasses-json>=0.6.7",
    "jinja2>=3.1",
    "rapt2==0.5.0",
]
requires-python = ">= 3.13"
authors = [
    {"name" = "Aidan Bailey", email = "abailey@airu.org.za"}
]
maintainers = [
    {"name" = "Aidan Bailey", email = "abailey@airu.org.za"}
]
description = "Compiles a Semantic SQL Transducer defined using relational algebra into SQL"
readme = {file = "README.md", content-type = "text/markdown" }
license = {file = "LICENSE"}
keywords = []
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.16",
    "ruff>=0.12.12",
    "pytest>=8.4.2"
]

[project.scripts]
sstc = "sstc.__main__:main"

[project.urls]
Repository = "https://github.com/unibz-krdb/sstc"

[tool.uv.sources]
rapt2 = { path = "../rapt2", editable = true }

[tool.ruff.lint.per-file-ignores]
"test/*.py" = ["F811"]

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
